# Copyright (C) 2023 THL A29 Limited, a Tencent company. All rights reserved.
#
# Licensed under the BSD 3-Clause License (the "License"); you may not use this
# file except in compliance with the License. You may obtain a copy of the
# License at
#
# https://opensource.org/licenses/BSD-3-Clause
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

exports_files([
    "dynamically_changed.h",
    "gflags_provider.cc",
    "option_impl.h",
    "option_provider.cc",
    "option_provider.h",
    "option_service.cc",
    "option_service.h",
])

cc_library(
    name = "key",
    srcs = ["key.cc"],
    hdrs = ["key.h"],
    visibility = ["//flare/base:__pkg__"],
    deps = [
        "//flare/base:string",
        "//flare/base/internal:hash_map",
    ],
)

cc_test(
    name = "key_test",
    srcs = ["key_test.cc"],
    deps = [
        ":key",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "option_service_test",
    srcs = ["option_service_test.cc"],
    visibility = ["//flare/base:__pkg__"],
    deps = [
        "//flare/base:option",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "json_parser",
    srcs = ["json_parser.cc"],
    hdrs = ["json_parser.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jsoncpp//:jsoncpp",
    ],
)

cc_test(
    name = "json_parser_test",
    srcs = ["json_parser_test.cc"],
    deps = [
        ":json_parser",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "proto_parser",
    hdrs = ["proto_parser.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "proto_parser_test",
    srcs = ["proto_parser_test.cc"],
    deps = [
        ":proto_parser",
        "//flare/testing:message_cc_proto",
        "@com_google_googletest//:gtest_main",
    ],
)
